Update app with improved UI, external image loading, and platform permissions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   image_picker: ^1.0.7
   google_fonts: ^6.1.0
   lottie: ^3.0.0
+  iconsax: ^0.0.8
   flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
