Add vercel.json configuration for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
   "version": 2,
-  "public": true,
-  "cleanUrls": true,
-  "outputDirectory": "build/web"
+  "builds": [
+    {
+      "src": "build/web",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/build/web/$1"
+    }
+  ]
 } 
