--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "build/web",
-      "use": "@vercel/static"
-    }
-  ],
+  "outputDirectory": "build/web",
+  "public": true,
+  "cleanUrls": true,
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/build/web/$1"
-    }
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 } 
