--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
   "version": 2,
+  "buildCommand": false,
   "outputDirectory": "build/web",
-  "routes": [
-    { "src": "/assets/(.*)", "dest": "/assets/$1" },
-    { "src": "/favicon.png", "dest": "/favicon.png" },
-    { "src": "/flutter.js", "dest": "/flutter.js" },
-    { "src": "/flutter_service_worker.js", "dest": "/flutter_service_worker.js" },
-    { "src": "/main.dart.js", "dest": "/main.dart.js" },
-    { "src": "/manifest.json", "dest": "/manifest.json" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 } 
